# src/main/java/com/upgrade/communitybudget/infrastructure/persistence/entity/UserEntity.java
@@ -1,0 +1,35 @@
+package com.upgrade.communitybudget.infrastructure.persistence.entity;
+
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.time.LocalDateTime;
+import java.util.Arrays;
+
+
+@Entity
+@Table(name = "users")
+@NoArgsConstructor
+@AllArgsConstructor
+@Getter
+@Setter
+
+public class UserEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private  Long id;
+    private  String name;
+    @Column(unique = true, name = "email")
+    private  String email;
+    private  String password;
+    private  String provider;
+    private  String providerId;
+    @Column(name = "created_at")
+    private  LocalDateTime createdAt;
+
+}
+
